# dmath

./: LICENSE  README.md  pyproject.toml
dmath/: batched_unit.py
dmath/statistics/: variance.py
tests/: test_variance.py
