[tool.poetry]
name = "dmath"
version = "0.1.0"
description = "Distributed math algorithms"
authors = ["Suraj M S <19975305+braindeadpool@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.4"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
